[package]
name = "upgrade"
version = "0.3.1"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A helpful library for upgradeing your standalone executables. Welcome to submit PR!"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/upgrade/"
keywords = ["upgrade", "self-upgrade", "program"]

[dependencies]
anyhow = "^1.0"
self-replace = "~1.3"
windows-sys = { version = "~0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_Debug"] }
widestring = "^1.0"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
[badges]
maintenance = { status = "experimental" }
