[package]
name = "upgrade"
version = "0.4.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A helpful library for upgradeing your standalone executables."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/upgrade/"
keywords = ["upgrade", "self-upgrade", "program"]

[dependencies]
anyhow = "^1.0"
self-replace = "~1.3"

[badges.maintenance]
status = "as-is"
