[package]
name = "upgrade"
version = "2.0.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A helpful library for upgradeing your standalone executables."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/upgrade/"
documentation = "https://docs.rs/upgrade/"
categories = ["accessibility"]
keywords = ["upgrade", "self-upgrade", "program"]

[dependencies]
self-replace = "^1.5"

[badges.maintenance]
status = "passively-maintained"
